Update prompt from 'HER NAME' to 'YOUR NAME'

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ button:hover{
 <!-- NAME INPUT -->
 <div id="nameScreen" class="screen hidden">
   <div class="box">
-    <h3>ENTER HER NAME</h3>
+    <h3>ENTER YOUR NAME</h3>
     <input id="nameInput" style="padding:8px;text-align:center;">
     <br>
     <button onclick="startGame()">CONFIRM</button>
